cabal-version: 2.4
name:          parfib
version:       0.1.0.0
synopsis:      Example with an interesting thread profile.
description:
  An implementation of the Fibonnaci function using spark parallelism.
  Taken from the GHC's @nofib@ benchmarks.

maintainer:    wen@well-typed.com
license-file:  LICENSE
category:      Debug, Monitoring, System, Network

executable parfib
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -finfo-table-map
  build-depends:
    , base             >=4.14  && <5
    , eventlog-socket  >=0.1.0 && <0.2
    , parallel         >=3.2   && <3.3

  if impl(ghc <9.4)
    ghc-options: -eventlog
