cabal-version: 2.4
name:          spectral-norm
version:       0.1.0.0
synopsis:      Example with an interesting thread profile.
description:   The Computer Language Benchmarks Game, spectral-norm.
license-file:  LICENSE
category:      Debug, Monitoring, System, Network

executable spectral-norm
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -funbox-strict-fields -O2 -optc-O3 -fexcess-precision -optc-ffast-math -Wno-x-partial
  build-depends:
    , base             >=4.14 && <5
    , eventlog-socket

  if impl(ghc <9.4)
    ghc-options: -eventlog
